# python-setup

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: test.ipynb
