[tool.poetry]
name = "mdm"
version = "0.1.0"
description = ""
authors = ["Luis Pinheiro <luis.pinheiro95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pylint = "^2.16.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
